[package]
name = "bpfwall-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
ufmt = "0.1"
memoffset = "0.6"
bpfwall-common = { path = "../bpfwall-common" }

[[bin]]
name = "bpfwall"
path = "src/main.rs"

[profile.dev]
panic = "abort"
debug = 1
opt-level = 2
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []