[package]
name = "wiretap"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/alessandrod/aya", branch="main", features=["async_tokio"] }
wiretap-common = { path = "../wiretap-common", features=["userspace"] }
anyhow = "1.0.42"
bytes = "1"
tokio = { version = "1.9.0", features = ["full"] }
tokio-stream = "0.1.7"
futures-batch = "0.6.0"
futures = "0.3"
csv-async = {version = "1.1", features = ["tokio", "with_serde"]}
structopt = "0.3"
serde = {version = "1.0.130", features = ["derive"]}
rusoto_core = { version="0.47.0", default_features=false, features=["rustls"] }
rusoto_s3 = { version="0.47.0", default_features=false, features=["rustls"] }


[[bin]]
name = "wiretap"
path = "src/main.rs"
